--- a/home.html
+++ b/home.html
@@ -18,6 +18,7 @@
 <body>
     <div class="container">
         <h1>캐-안습</h1>
+        <button onclick="notifyMe()">Notify me!</button>
         <img src="assets/eyeDrop.png" alt="눈 이미지" class="EyesComponent"/>
         <p class='info'>: 현대인의 올바른 컴퓨터 사용 습관 교정을 위한 눈 건강 보호 프로그램</p>
         <ul>
