feat notificatoin-oneHour

--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
             <div class="card">
                 <div class="card-header">
                     <h2>눈 깜박임 경고</h2>
-                    <div class="toggle-switch"></div>
+                    <div class="toggle-switch" id="blink_toggle"></div>
                 </div>
                 <p>눈을 깜빡이는 횟수가 일정 이하로 줄어들면 경고창을 띄웁니다.</p>
                 <div class="checkmark-badge">
@@ -42,7 +42,7 @@
             <div class="card">
                 <div class="card-header">
                     <h2>눈 운동 애니메이션</h2>
-                    <div class="toggle-switch"></div>
+                    <div class="toggle-switch" id="animation_toggle"></div>
                 </div>
                 <p>컴퓨터를 장시간 사용하면 눈 건강을 위한 애니메이션을 띄웁니다.</p>
             </div>
@@ -50,7 +50,7 @@
             <div class="card">
                 <div class="card-header">
                     <h2>자동 밝기 조절</h2>
-                    <div class="toggle-switch"></div>
+                    <div class="toggle-switch" id="light_toggle"></div>
                 </div>
                 <p>어두운 환경에서 컴퓨터를 할 경우 주변환경에 맞게 자동으로 밝기를 조절해줍니다.</p>
             </div>
