--- a/anime.html
+++ b/anime.html
@@ -14,6 +14,34 @@
 </head>
 <body>
     <div class="circle"></div>
+    <body class="container" style="margin-top: 20px;">
+          <div class="columns">
+              <div class="column" style="display: none;">
+                  <article class="panel is-info">
+                      <p class="panel-heading">Webcam Input</p>
+                      <div class="panel-block">
+                          <video class="input_video2"></video>
+                      </div>
+                  </article>
+              </div>
+              <div class="column">
+                  <article class="panel is-info">
+                      <p class="panel-heading">   Mediapipe Face Mesh
+                          <p>count: <input id="count-box" value="0" style="border: none;"></p>
+                          <p>gaze: <input id="gaze-box" value="0" style="border: none; font-size: 30px;"></p>
+                      </p>
+                      <div class="panel-block" style="display: none; justify-content: center;">
+                          <!-- 이거 동영상이야 -->
+                          <canvas st  class="output2" width="480px" height="480px"></canvas>
+                          <!-- 여기까지 동여상이야 -->
+                      </div>
+                  </article>
+              </div>
+          </div>
+          <div class="loading">
+              <div class="spinner"></div>
+          </div>
+          <div style="visibility: hidden;" class="control2"></div>
     <!-- <button id="startAnimationButton">눈 운동 시작!</button> -->
     <!-- <script src="node_modules/animejs/lib/anime.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
