--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
             <div class="card">
                 <div class="card-header">
                     <h2>눈 깜박임 경고</h2>
-                    <div class="toggle-switch" id="blink_toggle"></div>
+                    <div class="toggle-switch active" id="blink_toggle"></div>
                 </div>
                 <p>눈을 깜빡이는 횟수가 일정 이하로 줄어들면 경고창을 띄웁니다.</p>
                 <div class="checkmark-badge">
@@ -47,10 +47,10 @@
             <!-- Card 3 -->
             <div class="card">
                 <div class="card-header">
-                    <h2>자동 밝기 조절</h2>
+                    <h2>개발자에게 리포트 전송</h2>
                     <div class="toggle-switch" id="light_toggle"></div>
                 </div>
-                <p>어두운 환경에서 컴퓨터를 할 경우 주변환경에 맞게 자동으로 밝기를 조절해줍니다.</p>
+                <p>에러 발생 시 개발자에게 메일이 전송됩니다.</p>
             </div>
         </div>
         <br>
