--- a/home.html
+++ b/home.html
@@ -30,11 +30,7 @@
                     <h2>눈 깜박임 경고</h2>
                     <div class="toggle-switch active" id="blink_toggle"></div>
                 </div>
-                <p>눈을 깜빡이는 횟수가 일정 이하로 줄어들면 경고창을 띄웁니다.</p>
-                <div class="checkmark-badge">
-                    <div class="checkmark-icon"></div>
-                    <span>경고 음성으로 받기</span>
-                </div>
+                <p>눈을 깜빡이는 횟수가 일정 이하로 줄어들면 경고창과 알림음이 발생합니다.</p>
             </div>
             <!-- Card 2 -->
             <div class="card">
