--- a/anime.html
+++ b/anime.html
@@ -26,8 +26,7 @@
               </div>
               <div class="column">
                   <article class="panel is-info">
-                      <p class="panel-heading">   Mediapipe Face Mesh
-                          <p>count: <input id="count-box" value="0" style="border: none;"></p>
+                      <p class="panel-heading">
                           <p>gaze: <input id="gaze-box" value="0" style="border: none; font-size: 30px;"></p>
                       </p>
                       <div class="panel-block" style="display: none; justify-content: center;">
