--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
         <h1>캐-안습</h1>
-        <img src="assets/eyeDrop.png" alt="눈 이미지" class="EyesComponent"/>
+        <img src="assets/eyeDrop.png" alt="눈 이미지" class="EyesComponent" id="eyeImg"/>
         <p class='info'>: 현대인의 올바른 컴퓨터 사용 습관 교정을 위한 눈 건강 보호 프로그램</p>
         <ul>
             <li><span class="checkmark">✔</span>눈 움직임 파악을 위해 카메라 접근을 허용해주세요.</li>
